# University

./: README.md  example
sem_2/: lab3  lab7.cpp  prac1.cpp  prac2.cpp
sem_2/lab1/: CMakeLists.txt  lab1.cpp
sem_2/lab2/: lab2.cpp
sem_2/lab3/: CMakeLists.txt  lab3.cpp
sem_2/lab4/: CMakeLists.txt  lab4.cpp
sem_2/lab5/: CMakeLists.txt  lab5.cpp
sem_2/lab6/: CMakeLists.txt  lab6.cpp
sem_2/lab7/: CMakeLists.txt
sem_2/lab8/: CMakeLists.txt  lab8.cpp
sem_2/prac3/: CMakeLists.txt  prac3.cpp
sem_2/prac4/: CMakeLists.txt  configuration.txt  prac4.cpp
Лабораторная №8/: lab_8.cpp
Лабораторная №9/: lab_9.cpp
Практическое задание №1/: practice_1.cpp
Практическое задание №2/: practice_2.cpp
Практическое задание №6/: CMakeLists.txt  practice_6.cpp
